fix modal buttons on mobile

--- a/src/assets/styles/buttons.styl
+++ b/src/assets/styles/buttons.styl
@@ -37,6 +37,7 @@
 		@media phone
 			display block
 			width 100%
+			padding 35px 30px
 	// &.disabled
 	// &[disabled]
 	// 	cursor not-allowed
