--- a/src/blocks/auth-box/auth-box.styl
+++ b/src/blocks/auth-box/auth-box.styl
@@ -2,6 +2,10 @@
 	&__button
 		display block
 		width 100%
+		@media phone
+			margin-left -20px
+			margin-right -20px
+			width calc(100% + 40px)
 	&__footer
 		margin-top 27px
 		&-message
